<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPA Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="grade_point_hint">4.00</string>
    <string name="credit_hint">3.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_grades">Grades</string>
    <string name="pref_grade_summary">Tap to Modify</string>
    <string name="pref_add">Add</string>
    <string name="title_activity_calculator">GPA Calculator</string>
    <string name="pref_credits">Credits</string>
    <string name="pref_add_credits">Add Credit Hrs.</string>
    <string name="pref_add_grade">Add Grade</string>
    <string name="pref_background_color">Backgroud Color</string>
    <string name="pref_background_color_default">#fff4f4f4</string>
    <string name="pref_display">Display</string>
    <string name="action_save">Save</string>
    <string name="drawer_open">Options</string>
    <string name="drawer_close">GPA Calculator</string>
    <string name="title_activity_result_detail">Semester Results</string>

</resources>
